# wrench-mk1

./: .env.example  .gitignore  README.md  WEB.md  cli.py  components.json  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vercel.json
api/: anatomy.py  ask.py  diagnose.py  requirements.txt
app/: globals.css  layout.tsx  page.tsx
app/tool/: page.tsx
components/dock/: Dock.tsx
components/panel/: DiagnosisPanel.tsx  PartPanel.tsx  ResponsivePanel.tsx
components/stage/: Hotspot.tsx  Stage.tsx
components/ui/: dialog.tsx
hf_space/: README.md  app.py  requirements.txt
lib/: api.ts  constants.ts  motion.ts  sound.ts  types.ts  use-media-query.ts
notebooks/: wrench_colab.ipynb
plans/: 001-motion-tokens.md  002-press-feedback-buttons.md  003-anatomy-part-selection-motion.md  004-mode-switch-crossfade.md  005-gate-hover-for-touch.md  README.md
public/: anatomy-boxes.json
scripts/: local_api.py  make_placeholder.py  precompute_anatomy.py
wrench/: __init__.py  anatomy.py  config.py  diagnose.py  draw.py  schema.py
